# internal/api/oas_client_gen.go
@@ -33,7 +33,7 @@ type Invoker interface {
 	//
 	// Finalize Attestation.
 	//
-	// POST /attestatoin
+	// POST /attestation
 	FinalizeAttestation(ctx context.Context, request FinalizeAttestationReq, params FinalizeAttestationParams) (FinalizeAttestationRes, error)
 	// InitializeAssertion invokes initializeAssertion operation.
 	//
@@ -45,8 +45,16 @@ type Invoker interface {
 	//
 	// Initialize Attestation.
 	//
-	// GET /attestatoin
+	// GET /attestation
 	InitializeAttestation(ctx context.Context) (InitializeAttestationRes, error)
+	// InitializeAttestationJSON invokes initializeAttestationJSON operation.
+	//
+	// Initialize Attestation JSON.
+	//
+	// Deprecated: schema marks this operation as deprecated.
+	//
+	// GET /attestation/json
+	InitializeAttestationJSON(ctx context.Context) (InitializeAttestationJSONRes, error)
 }
 
 // Client implements OAS client.
@@ -176,7 +184,7 @@ func (c *Client) sendFinalizeAssertion(ctx context.Context, request OptFinalizeA
 //
 // Finalize Attestation.
 //
-// POST /attestatoin
+// POST /attestation
 func (c *Client) FinalizeAttestation(ctx context.Context, request FinalizeAttestationReq, params FinalizeAttestationParams) (FinalizeAttestationRes, error) {
 	res, err := c.sendFinalizeAttestation(ctx, request, params)
 	return res, err
@@ -186,7 +194,7 @@ func (c *Client) sendFinalizeAttestation(ctx context.Context, request FinalizeAt
 	otelAttrs := []attribute.KeyValue{
 		otelogen.OperationID("finalizeAttestation"),
 		semconv.HTTPMethodKey.String("POST"),
-		semconv.HTTPRouteKey.String("/attestatoin"),
+		semconv.HTTPRouteKey.String("/attestation"),
 	}
 
 	// Run stopwatch.
@@ -219,7 +227,7 @@ func (c *Client) sendFinalizeAttestation(ctx context.Context, request FinalizeAt
 	stage = "BuildURL"
 	u := uri.Clone(c.requestURL(ctx))
 	var pathParts [1]string
-	pathParts[0] = "/attestatoin"
+	pathParts[0] = "/attestation"
 	uri.AddPathParts(u, pathParts[:]...)
 
 	stage = "EncodeRequest"
@@ -339,7 +347,7 @@ func (c *Client) sendInitializeAssertion(ctx context.Context) (res InitializeAss
 //
 // Initialize Attestation.
 //
-// GET /attestatoin
+// GET /attestation
 func (c *Client) InitializeAttestation(ctx context.Context) (InitializeAttestationRes, error) {
 	res, err := c.sendInitializeAttestation(ctx)
 	return res, err
@@ -349,7 +357,7 @@ func (c *Client) sendInitializeAttestation(ctx context.Context) (res InitializeA
 	otelAttrs := []attribute.KeyValue{
 		otelogen.OperationID("initializeAttestation"),
 		semconv.HTTPMethodKey.String("GET"),
-		semconv.HTTPRouteKey.String("/attestatoin"),
+		semconv.HTTPRouteKey.String("/attestation"),
 	}
 
 	// Run stopwatch.
@@ -382,7 +390,7 @@ func (c *Client) sendInitializeAttestation(ctx context.Context) (res InitializeA
 	stage = "BuildURL"
 	u := uri.Clone(c.requestURL(ctx))
 	var pathParts [1]string
-	pathParts[0] = "/attestatoin"
+	pathParts[0] = "/attestation"
 	uri.AddPathParts(u, pathParts[:]...)
 
 	stage = "EncodeRequest"
@@ -400,6 +408,80 @@ func (c *Client) sendInitializeAttestation(ctx context.Context) (res InitializeA
 
 	stage = "DecodeResponse"
 	result, err := decodeInitializeAttestationResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// InitializeAttestationJSON invokes initializeAttestationJSON operation.
+//
+// Initialize Attestation JSON.
+//
+// Deprecated: schema marks this operation as deprecated.
+//
+// GET /attestation/json
+func (c *Client) InitializeAttestationJSON(ctx context.Context) (InitializeAttestationJSONRes, error) {
+	res, err := c.sendInitializeAttestationJSON(ctx)
+	return res, err
+}
+
+func (c *Client) sendInitializeAttestationJSON(ctx context.Context) (res InitializeAttestationJSONRes, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("initializeAttestationJSON"),
+		semconv.HTTPMethodKey.String("GET"),
+		semconv.HTTPRouteKey.String("/attestation/json"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, "InitializeAttestationJSON",
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [1]string
+	pathParts[0] = "/attestation/json"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeInitializeAttestationJSONResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
